added a basic start to styling for the site

--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,2 +1,17 @@
-h1 StaticPages#home
-p Find me in app/views/static_pages/home.html.slim
+.background-image
+  = image_tag("sample_pic.jpg")
+.container-fluid
+  .page-content.row
+    .mission-statement.col-md-12.text-center
+      h2 Helping all kids have the opportunity to ride
+      h5 Jean shorts pickled Thundercats Truffaut, mustache messenger bag vegan swag Schlitz VHS dreamcatcher. Ennui 3 wolf moon skateboard kitsch, pug street art quinoa. Irony Blue Bottle cornhole tilde trust fund.
+    .col-md-6.text-center
+      =image_tag("snfs_logo_bike.png", size:"350x200")
+      h4 What we do
+      p
+        | Jean shorts pickled Thundercats Truffaut, mustache messenger bag vegan swag Schlitz VHS dreamcatcher. Ennui 3 wolf moon skateboard kitsch, pug street art quinoa. Irony Blue Bottle cornhole tilde trust fund. Sriracha iPhone organic Odd Future ethical Marfa banh mi heirloom chia +1, hashtag before they sold out irony kogi. Fingerstache cred +1, tattooed banh 
+    .col-md-6.text-center
+      =image_tag("snfs_logo_bike.png", size:"350x200")
+      h4 What we do
+      p
+        | Jean shorts pickled Thundercats Truffaut, mustache messenger bag vegan swag Schlitz VHS dreamcatcher. Ennui 3 wolf moon skateboard kitsch, pug street art quinoa. Irony Blue Bottle cornhole tilde trust fund. Sriracha iPhone organic Odd Future ethical Marfa banh mi heirloom chia +1, hashtag before they sold out irony kogi. Fingerstache cred +1, tattooed banh 
