--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the StaticPages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.background-image {
+  img {
+    height: 500px;
+    width: 100%;
+    position: relative;
+    bottom: 80px;
+    z-index: -1;
+  }
+}
+.page-content {
+  .mission-statement {
+    margin-bottom: 50px;
+    h5 {
+      padding: 15px 380px;
+    }
+  }
+}
+
