changed the background picture

--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,5 +1,5 @@
 .background-image
-  = image_tag("sample_pic.jpg")
+  = image_tag("juliet-2.jpg")
 .container-fluid
   .page-content.row
     .mission-statement.col-md-12.text-center
